// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rich text to JSX assetNodeToJsx should render an asset hyperlink 1`] = `
<a
  download=""
  href="https://source.unsplash.com/random/800x500"
>
  ham hock
</a>
`;

exports[`Rich text to JSX assetNodeToJsx should render an asset hyperlink override 1`] = `<div />`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded asset override 1`] = `<div />`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded audio 1`] = `
<audio
  controls=""
  style="display: block; max-width: 100%; height: auto;"
>
  <source
    src="https://spotify.com/example.mp3"
    type="audio/mp3"
  />
  <p>
    Your browser does not support HTML5 audio. Here is a
     
    <a
      download=""
      href="https://spotify.com/example.mp3"
    >
      link to the audio file
    </a>
     
    instead.
  </p>
</audio>
`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded image 1`] = `
<img
  alt="Random photo from Unsplash.com"
  src="https://source.unsplash.com/random/800x500"
  style="max-width: 100%; height: auto;"
/>
`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded video 1`] = `
<video
  controls=""
  style="display: block; max-width: 100%; height: auto;"
>
  <source
    src="https://youtube.com/example.mp4"
    type="video/mp4"
  />
  <p>
    Your browser does not support HTML5 video. Here is a
     
    <a
      download=""
      href="https://youtube.com/example.mp4"
    >
      link to the video
    </a>
     
    instead.
  </p>
</video>
`;

exports[`Rich text to JSX assetNodeToJsx should render an unknown element if the mime type is undefined 1`] = `
<span
  style="color: white; background-color: red;"
>
  Node type is undefined
</span>
`;

exports[`Rich text to JSX assetNodeToJsx should render an unknown element if there is no component for the mime type 1`] = `
<span
  style="color: white; background-color: red;"
>
  Node type is undefined
</span>
`;

exports[`Rich text to JSX entryNodeToJsx should render an embedded entry block override 1`] = `<div />`;

exports[`Rich text to JSX entryNodeToJsx should render an embedded entry inline override 1`] = `<div />`;

exports[`Rich text to JSX entryNodeToJsx should render an entry hyperlink override 1`] = `<div />`;

exports[`Rich text to JSX entryNodeToJsx should render an unknown element if the content type is undefined 1`] = `
<span
  style="color: white; background-color: red;"
>
  Node type is undefined
</span>
`;

exports[`Rich text to JSX nodeToJsx should render an unknown element if the node type is undefined 1`] = `
<span
  style="color: white; background-color: red;"
>
  Node type is undefined
</span>
`;

exports[`Rich text to JSX parentNodeToJsx should render a node and its children 1`] = `
<ul>
  <li>
    <p>
      This is normal text.
      <strong>
        This is bold text.
      </strong>
      <em>
        This is italic text.
      </em>
      <u>
        This is underlined text.
      </u>
      <a
        href="https://acme.com"
      >
        This is a hyperlink.
      </a>
    </p>
  </li>
  <li>
    <p>
      This is normal text.
      <strong>
        This is bold text.
      </strong>
      <em>
        This is italic text.
      </em>
      <u>
        This is underlined text.
      </u>
      <a
        href="https://acme.com"
      >
        This is a hyperlink.
      </a>
    </p>
  </li>
  <li>
    <p>
      This is normal text.
      <strong>
        This is bold text.
      </strong>
      <em>
        This is italic text.
      </em>
      <u>
        This is underlined text.
      </u>
      <a
        href="https://acme.com"
      >
        This is a hyperlink.
      </a>
    </p>
  </li>
</ul>
`;

exports[`Rich text to JSX parentNodeToJsx should render a node without children 1`] = `<hr />`;

exports[`Rich text to JSX richTextToJsx should parse and render rich text into JSX 1`] = `
<div>
  <p>
    This is normal text.
    <strong>
      This is bold text.
    </strong>
    <em>
      This is italic text.
    </em>
    <u>
      This is underlined text.
    </u>
    <a
      href="https://acme.com"
    >
      This is a hyperlink.
    </a>
  </p>
  <span
    style="color: white; background-color: red;"
  >
    Unknown block node type.
  </span>
  <img
    alt="Random photo from Unsplash.com"
    src="https://source.unsplash.com/random/800x500"
    style="max-width: 100%; height: auto;"
  />
  <table>
    <tbody>
      <tr>
        <th>
          <p>
            A 1
          </p>
        </th>
        <th>
          <p>
            B 1
          </p>
        </th>
      </tr>
      <tr>
        <td>
          <p>
            A 2
          </p>
        </td>
        <td>
          <p>
            B 2
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Rich text to JSX textNodeToJsx should render a text node 1`] = `This is normal text.`;

exports[`Rich text to JSX textNodeToJsx should render a text node with a mark 1`] = `
<strong>
  This is bold text.
</strong>
`;

exports[`Rich text to JSX textNodeToJsx should render a text node with multiple marks 1`] = `
<em>
  <strong>
    This is bold and italic text.
  </strong>
</em>
`;

exports[`Rich text to JSX unknownNodeToJsx should render an unknown element 1`] = `
<div>
  <span
    style="color: white; background-color: red;"
  >
    Node type is undefined
  </span>
  This is normal text.
  <strong>
    This is bold text.
  </strong>
  <em>
    This is italic text.
  </em>
  <u>
    This is underlined text.
  </u>
  <a
    href="https://acme.com"
  >
    This is a hyperlink.
  </a>
</div>
`;
